[package]
name = "orengine-utils"
version = "2.2.0"
edition = "2021"
description = "This repository provides utilities for building high-performance applications."
repository = "https://github.com/orengine/orengine-utils"
license = "MIT"
keywords = ["utils", "concurrency", "performance", "hints", "cache-padded"]
categories = ["concurrency"]
authors = ["Eugene Usachev <https://github.com/Eugene-Usachev> and orengine contributors <team@orengine>"]
readme = "README.md"
rust-version = "1.83.0"

[features]
default = []
no_std = []
numa = []
more_numa_nodes = []

[dependencies]
libc = ">=0.2.169" # TODO after https://github.com/bytecodealliance/rustix/pull/1575 is merged switch to rustix because it is more performant