[package]
name = "orengine-utils"
version = "3.1.2"
edition = "2021"
description = "This repository provides utilities for building high-performance applications."
repository = "https://github.com/orengine/orengine-utils"
license = "MIT"
keywords = ["utils", "concurrency", "performance", "hints", "cache-padded"]
categories = ["concurrency"]
authors = ["Eugene Usachev <https://github.com/Eugene-Usachev> and orengine contributors <team@orengine>"]
readme = "README.md"
rust-version = "1.87.0"

[features]
default = []
no_std = []
numa = []
more_numa_nodes = []

[dependencies]
rustix = { version = "1.1.4", features = ["time"] }
libc = ">=0.2.169" # TODO after https://github.com/bytecodealliance/rustix/pull/1575 is merged remove it
smallvec = { version = ">=2.0.0-alpha.12, <3.0.0" }
serde = { version = ">=1.0.117, <2.0.0", features = ["derive"] }
paste = { version = ">=1.0.15, <2.0.0" }
